# kong-integration

./: POSTGRES_PASSWORD  README.md  compose.yml
01_Service/: Dockerfile  pyproject.toml
01_Service/01_service/: main.py
01_User/: Dockerfile  pyproject.toml
01_User/01_user/: main.py
02_Product/: Dockerfile
02_Product/02_product/: main.py
02_Service/: Dockerfile
02_Service/02_service/: main.py
